# epichord

./: AUTHORS  BUGS  INSTALL  Makefile.am  Makefile.in  TODO  autogen.sh  config.h.in  configure  configure.ac
doc/: Jamfile  Makefile.am  Makefile.in  README  color.txt  controls.txt  guide.txt  index.html  manual.txt  midi.txt  road
gfx/: Makefile.am  Makefile.in  README
man/: Makefile.am
src/: Makefile.am  Makefile.in  arranger.cpp  arranger.h  backend.h  customscroll.cpp  customscroll.h  dragbar.cpp  dragbar.h  eventedit.cpp  eventedit.h  eventmenu.cpp  eventmenu.h  jack.cpp  keyboard.cpp  keyboard.h  main.cpp  metronome.cpp  metronome.h  midi.cpp  midi.h  pianoroll.cpp  pianoroll.h  sampleview.cpp  sampleview.h  saveload.cpp  saveload.h  seq.cpp  seq.h  timeline.cpp  timeline.h  trackinfo.cpp  trackinfo.h  trackmodule.cpp  trackmodule.h  trackselect.cpp  trackselect.h  ui.cpp  ui.fl  ui.h  (+4 more)
